--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-devtools": "^5.0.0",
     "axios": "^1.6.0",
+    "framer-motion": "^12.4.10",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
